<resources>
    <string name="app_name">Simple weather</string>
    <string name="temp_default" translatable="false">%1$.0f°</string>
    <string name="temp_default_shown" translatable="false">30°</string>
    <string name="day_weather_pic" translatable="false">day weatherDescription pic</string>
    <string name="city_default">Moscow</string>
    <string name="wind_default_speed">5</string>
    <string name="wind_default_direction">SE</string>
    <string name="humidity_default" translatable="false">%d%%</string>
    <string name="humidity_default_shown" translatable="false">75%</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="appearence">Appearance</string>
    <string name="pref_dark_theme" translatable="false">Dark theme</string>
    <string name="prefs_switch_dark_summary">Enable dark theme</string>
    <string name="prefs_switch_dark_title">Dark theme</string>
    <string name="pref_about">About</string>
    <string name="prefs_developer_title">Developer</string>
    <string name="prefs_developer" translatable="false">Evgeny Antonov</string>
    <string name="prefs_ghub" translatable="false">Github</string>
    <string name="prefs_ghub_link" translatable="false">https://github.com/capevery/simpleWeather</string>
    <string name="prefs_version_title">Version 1.0</string>
    <string name="favourite">Favourite</string>
    <string name="country_default">Country</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_email">signedin@email.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pressure_default" translatable="false">750</string>
    <string name="undo_delete_text">Deleted</string>
    <string name="snack_bar_undo">undo</string>
    <string name="about">About</string>
    <string name="fab" translatable="false">fab</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="sunny">Sunny</string>
    <string name="city_not_found">City not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="city_nf">City not found!</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>