<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/appearence">

        <SwitchPreferenceCompat
            android:key="@string/pref_dark_theme"
            android:summary="@string/prefs_switch_dark_summary"
            android:title="@string/prefs_switch_dark_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">

        <PreferenceScreen
            android:key="developer"
            android:summary="@string/prefs_developer"
            android:title="@string/prefs_developer_title" />

        <PreferenceScreen
            android:key="github_link"
            android:summary="@string/prefs_ghub_link"
            android:title="@string/prefs_ghub" />

        <PreferenceScreen
            android:key="version"
            android:summary="1.0"
            android:title="@string/prefs_version_title" />

    </PreferenceCategory>

</PreferenceScreen>