<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recycler_cities"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_rounded_recycler"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_city_recycler_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_12"
        android:layout_weight="1"
        android:text="@string/city_default"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/tv_current_temp_recycler_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_12"
        android:layout_weight="2"
        android:text="@string/temp_default_shown"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_6"
        android:layout_weight="2"
        android:contentDescription="@string/day_weather_pic"
        android:src="@drawable/ic_weather_sunny_day" />
</LinearLayout>
