<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/day_recycler_item.xml"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recycler_item_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/background_rounded_recycler">

        <ImageView
            android:id="@+id/iv_day_weather_recycler_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_6"
            android:layout_marginBottom="@dimen/margin_6"
            android:contentDescription="@string/day_weather_pic"
            android:src="@drawable/ic_weather_sunny_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/tv_day_of_week_recycler_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/monday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_day_weather_recycler_item"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/tv_temp_day_recycler_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_12"
            android:text="@string/temp_default_shown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_day_weather_recycler_item"
            app:layout_constraintTop_toBottomOf="@id/tv_day_of_week_recycler_item">

        </TextView>

        <TextView
            android:id="@+id/tv_description_recycler_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_12"
            android:text="@string/sunny"
            app:layout_constraintStart_toEndOf="@id/tv_temp_day_recycler_item"
            app:layout_constraintTop_toBottomOf="@id/tv_day_of_week_recycler_item">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>