<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/daycard_item_constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/background_rounded"
        app:layoutDescription="@xml/activity_main_scene"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:motionDebug="SHOW_ALL">

        <ImageView
            android:id="@+id/image_day_weather"
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            android:contentDescription="@string/day_weather_pic"
            android:src="@drawable/ic_weather_sunny_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/half_card_guide_line"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/tv_temp_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_default"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_temp_night"
            app:layout_constraintTop_toBottomOf="@+id/image_day_weather">

        </TextView>

        <TextView
            android:id="@+id/tv_temp_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_default_night"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_temp_day"
            app:layout_constraintRight_toLeftOf="@id/half_card_guide_line"
            app:layout_constraintTop_toBottomOf="@+id/image_day_weather">

        </TextView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/half_card_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/half_card_guide_line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">

        </TextView>

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_default_speed"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/half_card_guide_line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city">

        </TextView>

        <TextView
            android:id="@+id/tv_wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_default_direction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_wind_speed"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city">

        </TextView>

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_default"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/half_card_guide_line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_wind_speed">

        </TextView>


    </androidx.constraintlayout.motion.widget.MotionLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_daily"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/halfScreenGuideline"
        tools:listitem="@layout/day_recycler_item" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/drawer_menu"
            app:navigationIcon="@drawable/ic_baseline_menu_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>